force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/ABHI_PSSCommunicationConfig__mdt.object-meta.xml
<CustomObject>
    <label>ABHI_PSSCommunicationConfig</label>
    <pluralLabel>ABHI_PSSCommunicationConfigs</pluralLabel>
</CustomObject>