force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/Alert_Code__c.field-meta.xml
<CustomField>
    <fullName>Alert_Code__c</fullName>
    <description>Alert Code</description>
    <inlineHelpText>Add 2 for SMS, 3 for Email, 4 for Whatsapp</inlineHelpText>
    <label>Alert Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>