force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/ALERTV10__c.field-meta.xml
<CustomField>
    <fullName>ALERTV10__c</fullName>
    <label>ALERTV10</label>
    <length>100</length>
    <type>Text</type>
</CustomField>