force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/ALERTV11__c.field-meta.xml
<CustomField>
    <fullName>ALERTV11__c</fullName>
    <label>ALERTV11</label>
    <length>100</length>
    <type>Text</type>
</CustomField>