force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/ALERTV12__c.field-meta.xml
<CustomField>
    <fullName>ALERTV12__c</fullName>
    <label>ALERTV12</label>
    <length>100</length>
    <type>Text</type>
</CustomField>