force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/Allowed_PS_Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Allowed_PS_Public_Group__c</fullName>
    <description>Name of the Perm Set or Public group who is allowed to use the functionality</description>
    <label>Allowed PS/Public Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>