force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/CommunicationType__c.field-meta.xml
<CustomField>
    <fullName>CommunicationType__c</fullName>
    <description>Used to select the desired communication type</description>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>