force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Email_Field__c</fullName>
    <description>API Name of the Email field on Entity Object</description>
    <inlineHelpText>API Name of the Email field on Entity Object</inlineHelpText>
    <label>Email Field on Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>