force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/IsUserAllowed__c.field-meta.xml
<CustomField>
    <fullName>IsUserAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUserAllowed</label>
    <type>Checkbox</type>
</CustomField>