force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Phone_Field__c</fullName>
    <description>API Name of the Phone field on Entity Object</description>
    <inlineHelpText>API Name of the Phone field on Entity Object</inlineHelpText>
    <label>Phone Field on Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>