force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <description>Id of the template to be used</description>
    <label>Template Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>