force-app/main/default/objects/ABHI_PSSCommunicationConfig__mdt/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <description>Name of the Template to be used</description>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>